Everything works properly.  Need to fix spacing on text boxes.  Possibly add pricing...

--- a/style.css
+++ b/style.css
@@ -3,3 +3,11 @@
   top: 50px;
   right: 50px;
 }
+
+table {
+  border-spacing: 80px 20px;
+}
+
+th, td{
+  text-align: center;
+}
